--- a/sky-take-out/sky-server/src/main/resources/application-dev.yml
+++ b/sky-take-out/sky-server/src/main/resources/application-dev.yml
@@ -6,4 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
-
+  alioss:
+    endpoint: oss-cn-nanjing.aliyuncs.com
+    access-key-id: LTAI5tKSxNWt15oQFgLvBq3Z
+    access-key-secret: MvyLwecZT2NZIk1VxyXVbCvDR2zwPm
+    bucket-name: sky-take-out-learning-yeyi0003
