--- a/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/sky-take-out/sky-server/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 
 spring:
   profiles:
+    # 由于开发环境使用的配置可能和上线后使用的配置不同，开发使用的是 dev，上线后使用的是 prod
+    # 所以需要指定当前使用的配置环境，后续上线后只需要改一下这里就行
     active: dev
   main:
     allow-circular-references: true
@@ -37,3 +39,10 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+  alioss:
+    endpoint: ${sky.alioss.endpoint}
+    access-key-id: ${sky.alioss.accessKeyId}
+    access-key-secret: ${sky.alioss.accessKeySecret}
+    bucket-name: ${sky.alioss.bucketName}
+
