--- a/sky-take-out/sky-server/src/main/resources/application-dev.yml
+++ b/sky-take-out/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,9 @@ sky:
     access-key-id: LTAI5tKSxNWt15oQFgLvBq3Z
     access-key-secret: MvyLwecZT2NZIk1VxyXVbCvDR2zwPm
     bucket-name: sky-take-out-learning-yeyi0003
+  redis:
+    host: localhost
+    port: 6379
+    password: 1234
+    database: 1
+
