--- a/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/sky-take-out/sky-server/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   redis:
     host: ${sky.redis.host}
     port: ${sky.redis.port}
-    password: ${sky.redis.password}
+#    password: ${sky.redis.password}
     database: ${sky.redis.database}
 
 mybatis:
