--- a/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/sky-take-out/sky-server/src/main/resources/application.yml
@@ -45,9 +45,18 @@ sky:
     # 设置前端传递过来的令牌名称
     admin-token-name: token
 
+    # 微信小程序 jwt 令牌配置
+    user-secret-key: itcast
+    user-ttl: 720000000
+    user-token-name: authentication
+
   alioss:
     endpoint: ${sky.alioss.endpoint}
     access-key-id: ${sky.alioss.accessKeyId}
     access-key-secret: ${sky.alioss.accessKeySecret}
     bucket-name: ${sky.alioss.bucketName}
+
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
 
